# codex-meter

./: .gitignore  README.md  launch.py  pyproject.toml  requirements.txt  run.bat  run.command  run.sh  setup.bat  setup.command  setup.sh  uninstall.bat  uninstall.command  uninstall.sh
codex_meter/: __init__.py  __main__.py  api.py  auth.py  autostart.py  config.py  i18n.py  icon.py  instance.py  tray.py  win_tray.py
codex_meter/assets/: SOURCE.txt
tests/: _support.py  test_api.py  test_auth.py  test_formatting.py  test_icon.py
